# permutations

./: .clang-format  .editorconfig  .gitignore  2by2matrix.h  CMakeLists.txt  CMakePresets.json  experiment.cpp  formatting.cpp  group-interface.h  group-table.html  permutationen.cpp  script.js  style.css
